@@ -48,6 +48,7 @@ constexpr RideTypeDescriptor InvertedRollerCoasterRTD =
     SET_FIELD(ColourPresets,TRACK_COLOUR_PRESETS(
         { COLOUR_BORDEAUX_RED, COLOUR_BORDEAUX_RED, COLOUR_BLACK },
         { COLOUR_WHITE, COLOUR_YELLOW, COLOUR_WHITE },
+        { COLOUR_SALMON_PINK, COLOUR_SALMON_PINK, COLOUR_GREY },
         { COLOUR_BLACK, COLOUR_BRIGHT_RED, COLOUR_BLACK },
         { COLOUR_SATURATED_BROWN, COLOUR_WHITE, COLOUR_SATURATED_BROWN },
         { COLOUR_YELLOW, COLOUR_YELLOW, COLOUR_BLACK },
